@@ -1,20 +1,10 @@
 AUX qt-4.5-nolibx11.diff 1167 RMD160 da983a70bd436d35e325203dfe9390b2aee925ae SHA1 ee916596e422e91179458778b013fb103dc97cac SHA256 c6c686c1cfc07caefafe697eb8b02b6806f3845f20d3fd3839301d8a94259b0b
 AUX qt-4.5.3-glib-event-loop.patch 770 RMD160 0b854962f1b46958e8b969f949fe5e0d6e66b5ff SHA1 26543a05f894678fd1357d7b0fca217dac6b1a0c SHA256 83f010690d3a7220f5bd559b2aa82d9135d31a2c04bf9d6b12ed78a2dd3da6bb
-DIST qt-everywhere-opensource-src-4.6.0-beta1.tar.gz 154892235 RMD160 aa3df8dc0ea601f73abe624f376cf3df032d77d1 SHA1 ab3898f0d7307decbce03a6fc6829218bba17311 SHA256 033bdd4bc1d371ea21b03098a8276d957ecc535725fa1122d17220d47f15e9ee
-DIST qt-mac-opensource-src-4.4.2.tar.bz2 100715282 RMD160 6c92c2d745ca75fc9779f360825a48c29689ff61 SHA1 217e2d4f80d1c6d68d6bdfe8c757b2bfee929421 SHA256 1191d87e55a718a6cd2d20c2cf43f93ca98de5aebfa49152ef2551ee36914e56
-DIST qt-mac-opensource-src-4.5.1.tar.bz2 112558395 RMD160 eaab3d822c5a752c800e4b654cf45ef0b4b18f81 SHA1 c658aa96b715b5242d415d8b05eb81968dfaea67 SHA256 5bdfe81e0955614827550a19856c5e97af7586e06474a602ae66640fad000116
-DIST qt-mac-opensource-src-4.5.2.tar.bz2 113874121 RMD160 245efc87416788f37b4b660153a53848308d822f SHA1 da62223757a8c61c8f0e895631bb6ff06beae229 SHA256 ca990057b54f43abe0647bbd1cc7f25945e97c86caee46310d2c3be95aa7dd53
+DIST qt-everywhere-opensource-src-4.6.0-rc1.tar.gz 153619571 RMD160 9ba13ba9aa99d3674b3bbc34601c7a34812c0701 SHA1 2fb07479c639fc2f98be0f9b65b0d179e4c637f7 SHA256 28649e0bd086783f3c960d9427298e1231c9eb44cb2c9ddad20cb3e60475c527
 DIST qt-mac-opensource-src-4.5.3.tar.gz 123311631 RMD160 290fecbe8698ead4f884617ae4dd20b37663545e SHA1 566a9c45b261447c07c784b9317c9b5aae1ccbd8 SHA256 1bca03b2355e686ae7184d98c4da1d60689732754407886cefff4288b28c6f34
-DIST qt-x11-opensource-src-4.4.2-headers.tar.bz2 2509611 RMD160 3424d4049f1c06959bd57a98e3933636515c60fa SHA1 f0945230b8856b446f03473c18474e9224b30fcf SHA256 aa02d9e2c017ff92d91ef73781d4d1a28be53136886ac99275df053fe31d1fff
-DIST qt-x11-opensource-src-4.4.2.tar.bz2 102816706 RMD160 5719ab5800ca181417e0dff7f961af7b371ddd97 SHA1 0bc56934565f529a2708533a4f160fbc87b9d9e0 SHA256 0530fefc452e5029877739164e133de7df5faa519b0fb3d9fcf40b467350c675
-DIST qt-x11-opensource-src-4.5.1.tar.bz2 114667436 RMD160 702d7c6bb9787cd5602dcb8afce52bdfcfd52179 SHA1 50ba9b6d2eb7056e47dc53775be509c4ff6ec015 SHA256 b994c40e41386c9d82f025dd9198e1161717021216680adef97da3f1b8947c75
-DIST qt-x11-opensource-src-4.5.2.tar.bz2 116015284 RMD160 1af31d7fe66665e718f0c728b41becea9996fba7 SHA1 bf2dd175cade15f3f505fe6aac1401bdbfeb4e5b SHA256 d26d94c9cb90dfe16a13b39ac7157f66ec9f5fbbf9d7faa57f7466157721f836
 DIST qt-x11-opensource-src-4.5.3.tar.gz 125384668 RMD160 93d765ecf89ed15668a4eedc7d77c2a2e41424a2 SHA1 78620ffd03c83c4d86f5039ccf7b09e5c709ed25 SHA256 0c87fc42825d3556970db4412257c6874e716ac3bc45e6f273924d5d6a089aa6
-EBUILD qt-xmlpatterns-4.4.2.ebuild 815 RMD160 8c00a1445d5f9773c2f096e1de78592fed5e8d98 SHA1 2ccd546b20121deb06d697dc89257f066034beaf SHA256 9f4c8a57a7505c1999f585eddfed9c1449422360e57778eb5596ecb238308625
-EBUILD qt-xmlpatterns-4.5.1.ebuild 820 RMD160 d401ae2c5ac958e926a1adea28449b44b2ee15ac SHA1 1f05a81318fd18d7bcf369c04f901ee8f6af53f0 SHA256 700c54a42ed7ab9a600d37c362faeca0334fd0786b8c7d32877f13a33352ec8d
-EBUILD qt-xmlpatterns-4.5.2.ebuild 869 RMD160 ce490af04d58379bc0b7d5a06e9c03270393e9fd SHA1 a0fec8c24e5f5e96af904edc814f716c63ecc4b9 SHA256 a133db76f219a28a0e79d649fb3de30fd29fed1d1143fdb2c8e81ef941458d25
 EBUILD qt-xmlpatterns-4.5.3-r1.ebuild 914 RMD160 bbe7b9090747775c37c5c657c62bcdc62236978f SHA1 5b3f6280a39a2bd67d16ed1b5dbc8ceabacec7b1 SHA256 016175a80adfa00c5386a4ed985f781d67ccf8748170ff31b807111d332b0a35
 EBUILD qt-xmlpatterns-4.5.3.ebuild 867 RMD160 ef66499fbf2c5efc0d9c46ef12360cb5fd312bb2 SHA1 ab170a93e04b94758bf52a56b693fa6c3b34486c SHA256 80f5f5bacb3c8154af6ce29708de2c78e8059d0a0d36ac41992c63c0272489ce
-EBUILD qt-xmlpatterns-4.6.0_beta1.ebuild 847 RMD160 b1d0e3b0151713a179f96fa49dd1698c015b699e SHA1 fe14640b17e70416b7b7458c5eb5d2fd8b9c3876 SHA256 659766a1e65ed2ecf1ab265060b9ef10af38a7d13124721dcafbe04aec5daa97
-MISC ChangeLog 6652 RMD160 1f8fe17095ad5716ac8c5a6324c02fec95d88364 SHA1 6c5b449fde71ddacb70811058788558c75a81536 SHA256 f5b7c86b5a637a1db27e0ad6a54bae94d45df476a19018a13f3c5f75ecf45975
+EBUILD qt-xmlpatterns-4.6.0_rc1.ebuild 845 RMD160 8eb1559e5d4075416b6fe340ce9bf8f3365b70dd SHA1 015d84e051a38652d73a7e23130c4f68c74819b2 SHA256 218a10d1116de4ad369dbbdc04a2b72aa1ea8b6eb20e4607cf50a0ccfa901b31
+MISC ChangeLog 6853 RMD160 d7c88128086682646fabfdd7ee6b7433e9b4f161 SHA1 aa60b2834d7545428bd6501014db3a603ed6f866 SHA256 1a62edcb9d236ba02eaa19e1ebed09a95302d44ffbc5f3950a334412d2ae624b
 MISC metadata.xml 156 RMD160 d76590850d56864c8d99e6877ed15841b55ef1fc SHA1 e872bab086832a9db3f0fa9b1897c70577d3af21 SHA256 94c4f580c1a55f8a5e1a1dcdd6dedfea0b8bd78c1d7137c354938d73c49e4448
